# Frontiers-Hack

./: .gitignore  Cargo.toml  PRIVACY_POLICY.md  README.md  app.js  index.css  index.html  start.sh
.kiro/settings/: lsp.json
backend/: langgraph_entry.py  requirements.txt  test_supabase.py
backend/app/: config.py  main.py
backend/app/agent/: graph.py  nodes.py  prompts.py  state.py
backend/app/agent/tools/: data_tools.py  exa_tools.py  gws.py  memory_tools.py  notification_tools.py  registry.py
backend/app/api/: chat.py  health.py  notifications.py  sessions.py  tasks.py
backend/app/core/: gws_runner.py  sse.py
backend/app/services/: heartbeat.py  store.py
backend/supabase/: schema.sql
docs/prd/: 00-overview.md  01-vision.md  02-architecture.md  03-database-schema.md  04-langgraph.md  05-tools.md  06-prompts.md  07-schemas.md  08-api.md  09-implementation.md  opencode_prompt_engineering_analysis.md
frontend/: clean_run.sh
frontend/scripts/: tauri-auto.js
frontend/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/migrations/: 20260307000000_add_google_calendar_integration.sql  20260307200000_add_agent_runtime.sql
frontend/src-tauri/src/: config.rs  lib.rs  main.rs  onboarding.rs  tray.rs  utils.rs
frontend/src-tauri/src/agent/: commands.rs  mod.rs  service.rs  types.rs
frontend/src-tauri/src/analytics/: analytics.rs  commands.rs
frontend/src-tauri/src/api/: api.rs  commands.rs
frontend/src-tauri/src/audio/: async_logger.rs  audio_processing.rs  batch_processor.rs  buffer_pool.rs  common.rs  constants.rs  decoder.rs  device_detection.rs  device_monitor.rs  diagnostics.rs  encode.rs  ffmpeg.rs  ffmpeg_mixer.rs  hardware_detector.rs  import.rs  incremental_saver.rs  level_monitor.rs  mod.rs  permissions.rs  pipeline.rs  playback_monitor.rs  post_processor.rs  recording_commands.rs  recording_manager.rs  recording_preferences.rs  recording_saver.rs  recording_state.rs  retranscription.rs  simple_level_monitor.rs  stream.rs  system_audio_commands.rs  system_audio_stream.rs  vad.rs
frontend/src-tauri/src/audio/capture/: backend_config.rs  core_audio.rs  microphone.rs  mod.rs  system.rs
frontend/src-tauri/src/audio/devices/: configuration.rs  discovery.rs  fallback.rs  microphone.rs  mod.rs  speakers.rs
frontend/src-tauri/src/audio/devices/platform/: linux.rs  macos.rs  mod.rs  windows.rs
frontend/src-tauri/src/audio/transcription/: engine.rs  gemini_provider.rs  mod.rs  parakeet_provider.rs  whisper_provider.rs  worker.rs
frontend/src-tauri/src/calendar/: commands.rs  service.rs  types.rs
frontend/src-tauri/src/console_utils/: console_utils.rs  mod.rs
frontend/src-tauri/src/database/: commands.rs  manager.rs  models.rs
frontend/src-tauri/src/database/repositories/: agent.rs  calendar.rs  meeting.rs  mod.rs  setting.rs
frontend/src-tauri/src/groq/: groq.rs
frontend/src-tauri/src/notifications/: commands.rs  manager.rs  mod.rs  settings.rs  system.rs  types.rs
frontend/src-tauri/src/ollama/: metadata.rs  mod.rs  ollama.rs
frontend/src-tauri/src/openai/: openai.rs
frontend/src-tauri/src/openrouter/: mod.rs  openrouter.rs
frontend/src-tauri/src/parakeet_engine/: commands.rs  mod.rs  model.rs  parakeet_engine.rs
frontend/src-tauri/src/summary/: commands.rs  llm_client.rs  mod.rs  processor.rs  service.rs  template_commands.rs
frontend/src-tauri/src/summary/summary_engine/: client.rs  commands.rs  mod.rs  model_manager.rs  models.rs  sidecar.rs
frontend/src-tauri/src/summary/templates/: defaults.rs  loader.rs  types.rs
frontend/src-tauri/src/whisper_engine/: commands.rs  mod.rs  parallel_commands.rs  parallel_processor.rs  system_monitor.rs  whisper_engine.rs
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/_components/: SettingsModal.tsx  TranscriptPanel.tsx
frontend/src/app/agent/: page.tsx
frontend/src/components/: AgentSettings.tsx  AnalyticsProvider.tsx  GoogleCalendarSettings.tsx  Logo.tsx  ModelSettingsModal.tsx  PreferenceSettings.tsx  TranscriptSettings.tsx  UpcomingMeetings.tsx
frontend/src/components/MeetingDetails/: MeetingAgentContext.tsx  MeetingCalendarLink.tsx  SummaryPanel.tsx
frontend/src/components/Notifications/: NotificationCard.tsx  NotificationsPanel.tsx
frontend/src/components/Sidebar/: SidebarProvider.tsx  index.tsx
frontend/src/components/onboarding/: OnboardingFlow.tsx
frontend/src/components/onboarding/steps/: DownloadProgressStep.tsx  ModeSelectionStep.tsx  PermissionsStep.tsx  SetupOverviewStep.tsx  index.ts
frontend/src/contexts/: ConfigContext.tsx  NotificationsContext.tsx  OllamaDownloadContext.tsx  OnboardingContext.tsx  RecordingPostProcessingProvider.tsx
frontend/src/hooks/: useRecordingStart.ts
frontend/src/lib/: analytics.ts  tauri-compat.ts
frontend/src/services/: agentService.ts  calendarService.ts  configService.ts  recordingService.ts
frontend/src/types/: onboarding.ts
llama-helper/: Cargo.toml
supabase/: config.toml
supabase/migrations/: 20260307000000_initial_schema.sql  20260307000001_ai_assistant_schema.sql
website/: app.js  index.css  index.html
